--- a/assets/templates/view.html.tmpl
+++ b/assets/templates/view.html.tmpl
@@ -156,9 +156,9 @@
                   <tr> <td class="rr-label"> AVG CHIPS </tr>
                   <tr> <td class="avg-chips" id="avg-chips"> {{ .AverageChips }} </tr>
                   <tr> <td class="rr-label"> NEXT LEVEL </tr>
-                  <tr> <td class="next-level" id="next-level"> 60-120 + 120 ANTE</tr>
+                  <tr> <td class="next-level" id="next-level"> TBD </tr>
                   <tr> <td class="rr-label"> NEXT BREAK </tr>
-                  <tr> <td class="next-break" id="next-break"> TBD </tr>
+                  <tr> <td class="next-break" id="next-break"> RSN </tr>
                   </tbody>
                 </table>
             </tr>
