Initial working impl of database for state management.
There is a lot missing here, but this is actually writing
to a database.  Also, start/stop is much improved, and
there is a more careful approach to clock management.

--- a/assets/templates/slash.html.tmpl
+++ b/assets/templates/slash.html.tmpl
@@ -31,12 +31,14 @@
     <h1> IRATA POKER CLOCK </h1>
 
     <table>
-      {{range .Events}}
+      {{range .Slugs}}
       <tr>
-        <th> <a href="/event/{{.EventID}}">{{ .EventName }}</a> </th>
+        <td> * </td> <th> <a href="/t/{{.TournamentID}}">{{ .TournamentName }}</a> </th>
       </tr>
       {{end}}
     </table>
+
+    <hr>
 
   </body>
 </html>
