--- a/assets/templates/slash.html.tmpl
+++ b/assets/templates/slash.html.tmpl
@@ -30,6 +30,17 @@
 
     <h1> IRATA POKER CLOCK </h1>
 
+    {{ if .IsAdmin }}
+    <table width="100%">
+    <th> &#9830; Admin &#9830; </th>
+    <td> Create: [<a href="/t/create">Tournament</a>] </td>
+    <td> Manage: [<a href="/manage/site">Site</a>] [<a href="/manage/footers/">Footer Plugs</a>] [<a href="/manage/structures/">Structures</a>] </td>
+    <td> &#9830;&#9830; [<a href="/logout">LOGOUT</a>]
+    </tr>
+    </table>
+    <hr>
+    {{ end }}
+
     <table>
         {{ $n := 0 }}
         {{range $i, $t := .Overview.Slugs}}
@@ -50,6 +61,12 @@
     </table>
 
     <hr>
+
+    {{ if not .IsAdmin }}
+    <p>
+    [<a href="/login">LOGIN</a>] to manage tournaments and other data.
+    </p>
+    {{ end }}
 
   </body>
 </html>
