Improve keyboard handling, maybe.

--- a/assets/templates/slash.html.tmpl
+++ b/assets/templates/slash.html.tmpl
@@ -54,7 +54,7 @@
             </td>
             {{ end }}
             <td> 
-              <a href="/{{.TournamentID}}"><em>{{ .TournamentName }}</em></a> {{ .Description }}</td>
+              <a href="/t/{{.TournamentID}}"><em>{{ .TournamentName }}</em></a> {{ .Description }}</td>
         </tr>
         {{ end }}
         {{ end }}
