--- a/assets/templates/view.html.tmpl
+++ b/assets/templates/view.html.tmpl
@@ -209,8 +209,9 @@
           <li><b>End</b>: Remove Buy-In (alias - or ,</li>
           <li><b>G</b>: Start Clock</li>
           <li><b>S</b>: Stop Clock</li>
+          <li><b>E</b>: Edit Event</li>
           <li><b>F1 or ? or /</b>: This</li>
-          <li><b>Esc</b>: Exit to Overview (also BS)</li>
+          <li><b>Esc</b>: Exit to Overview (also Backspace)</li>
         </ul>
         <div class="help-dialog-close">
           Press <b>Esc</b> to close this help.
