--- a/assets/templates/view.html.tmpl
+++ b/assets/templates/view.html.tmpl
@@ -127,7 +127,7 @@
         position: absolute;
         left: 50%;
         top: 50%;
-        transform: translate(-50%, -50%) rotate(-25deg);
+        transform: translate(-50%, -50%) rotate(-33deg);
         font-size: 8vi;
         color: #dddd00;
         text-shadow:
@@ -294,7 +294,7 @@
 
     <script src="/fs/movement.js"></script>
     {{ if .InstallKeyboardHandlers }}
-    <script> installKeyboardHandlers(); </script>
+    <script> install_keyboard_handlers(); </script>
     {{ end }}
   </body>
 </html>
