Mostly Copilot authored footer plug creator.  Mostly.
We can argue who did the really janky bits, but copilot wrote HTML out
with Fprintf.

--- a/assets/templates/slash.html.tmpl
+++ b/assets/templates/slash.html.tmpl
@@ -33,8 +33,8 @@
     {{ if .IsAdmin }}
     <table width="100%">
     <th> &#9830; Admin &#9830; </th>
-    <td> Create: [<a href="/t/create">Tournament</a>] </td>
-    <td> Manage: [<a href="/manage/site">Site</a>] [<a href="/manage/footers/">Footer Plugs</a>] [<a href="/manage/structures/">Structures</a>] </td>
+    <td> Create: [<a href="/create/t">Tournament</a>] </td>
+    <td> Manage: [<a href="/manage/site">Site</a>] [<a href="/manage/footer-set">Footer Plugs</a>] [<a href="/manage/structure">Structures</a>] </td>
     <td> &#9830 [<a href="/logout">LOGOUT</a>] &#9830; </td>
     </tr>
     </table>
