Copilot-assissted footer plug editor.

--- a/assets/templates/manage-footer-sets.html.tmpl
+++ b/assets/templates/manage-footer-sets.html.tmpl
@@ -62,7 +62,7 @@
                     <td>{{ .Name }}</td>
                     <td>{{ .Version }}</td>
                     <td>
-                        <a href="/manage/footer-set/{{ .FooterPlugsID }}">Edit</a>
+                        <a href="/manage/footer-set/{{ .FooterPlugsID }}/edit">Edit</a>
                         <a href="/manage/footer-set/{{ .FooterPlugsID }}/delete" style="color:#f88;">Delete</a>
                     </td>
                 </tr>
