Better line height.

--- a/assets/templates/manage-footer-sets.html.tmpl
+++ b/assets/templates/manage-footer-sets.html.tmpl
@@ -12,6 +12,7 @@
           font-family: arcade, monospace;
           background-color: #000000;
           color: #ffffff;
+          line-height: 1.7;
       }
       .container {
           max-width: 50vw;
